# asta-insights

./: .dockerignore  .gitignore  .vercelignore  API_DOCUMENTATION.md  API_DOCUMENTATION_v4.2.md  ARCHITECTURE_STATUS.md  Dockerfile  README.md  ask_asta.py  asta-insights.code-workspace  asta_run.py  batch_generate_insights.py  check_missing_coords.py  debug_meqasa.html  enrich_with_poi.py  explore_schema.py  fetch_properties.py  generate_realistic_prices.py  ghana_properties_enriched.csv  ghana_properties_final.csv  ghana_properties_raw.csv  ghana_properties_realistic_prices.csv  gpc_master_dump_2025.jsonl  ingest_chaos.py  inspect_bucket.py  inspect_data.py  inspect_meqasa.html  jiji_harvester.py  jiji_stealth_scraper.py  main.py  meqasa_full_dump.py  meqasa_harvester.py  meqasa_rentals_harvester.py  process_jiji.py  process_meqasa.py  pyproject.toml  requirements.txt  run_gpc_test.py  run_pipeline.py  scrape_ghana_listings.py  (+19 more)
api/: main.py  utils.py
archive/: bq_ingestion.py  debug_ingest.py  debug_scraper.py  debug_search.py  fetch_full_dataset.py  inspect_dump.py  run_master_dump.py  smoke_test.py  test_vertex.py
asta-engine/: .gitignore  ARCHITECTURE_STATUS.md  Dockerfile  README.md  asta_run.py  backfill_news.py  main.py  requirements.txt  services.py  simulate_twilio.py
asta-web/: .dockerignore  App.tsx  Dockerfile  README.md  index.html  package-lock.json  package.json
asta_data_crawler/: .gitignore  main.py  requirements.txt  run_pipeline.py
asta_insights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
components/: LazyListingForm.jsx
(+176 files in other folders)
